se agregaron mejoras con respecto a validaciones en eventos udi

--- a/src/app/business/pages/inscription/step4-component.html
+++ b/src/app/business/pages/inscription/step4-component.html
@@ -151,7 +151,7 @@
     [closable]="false"
 >
     <span class="p-text-secondary block mb-5"
-        >Ingrese el porcentaje mínimo en el cual.</span
+        >Porcentaje mínimo de similitud.</span
     >
     <div class="justify-content-center gap-3 mb-3">
         <div class="flex">
