--- a/src/app/business/pages/budget/budget.component.html
+++ b/src/app/business/pages/budget/budget.component.html
@@ -3,206 +3,108 @@
     <div class="col-12">
         <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
         <div class="card px-6 py-6">
-            <div class="">
-                <form [formGroup]="actividadForm" (ngSubmit)="onSubmit()">
-                    <!-- Actividades -->
-                    <div formArrayName="actividades">
-                        <div
-                            *ngFor="let actividad of actividades.controls; let i = index"
-                            [formGroupName]="i"
-                            class="mb-4"
-                            style="border: 1px dashed #d1d5db; border-radius: 5px; padding: 15px;"
-                        >
-                            <div class="flex">
-                                <div class="mr-auto">
-                                    <h5>{{ i + 1 + ". Actividad Funcional" }}</h5>
-                                </div>
-                                <button
-                                    pButton
-                                    type="button"
-                                    icon="pi pi-times"
-                                    class="p-button-danger"
-                                    [rounded]="true"
-                                    [text]="true"
-                                    (click)="removeActividad(i)"
-                                ></button>
-                            </div>
 
-                            <!-- Descripción de la Actividad -->
-                            <div class="p-field p-grid">
-                                <div class="col-12">
-                                    <input
-                                        pInputText
-                                        id="descripcion"
-                                        style="width: 100%"
-                                        formControlName="descripcion"
-                                        placeholder="Descripción de la actividad"
-                                        class="p-inputtext-sm"
-                                    />
-                                </div>
-                            </div>
 
-                            <!-- Panel de Tareas -->
-                            <p-panel header="Tareas" [toggleable]="true" class="mb-3">
-                                <div formArrayName="tareas">
-                                    <div
-                                        *ngFor="let tarea of tareas(i).controls; let j = index"
-                                        [formGroupName]="j"
-                                        class="mb-2"
-                                    >
-                                        <!-- Descripción de la Tarea -->
-                                        <div class="flex mb-2">
-                                            <label for="tarea-descripcion" class="m-auto mr-2">
-                                                {{ i + 1 + "." + (j + 1) }}
-                                            </label>
-                                            <div class="w-full">
-                                                <input
-                                                    pInputText
-                                                    id="tarea-descripcion"
-                                                    style="width: 100%"
-                                                    formControlName="descripcion"
-                                                    placeholder="Descripción de la tarea"
-                                                    class="p-inputtext-sm"
-                                                />
-                                            </div>
-                                            <div>
-                                                <button
-                                                    pButton
-                                                    type="button"
-                                                    icon="pi pi-trash"
-                                                    [rounded]="true"
-                                                    [text]="true"
-                                                    class="p-button-danger ml-2"
-                                                    (click)="removeTarea(i, j)"
-                                                ></button>
-                                            </div>
-                                        </div>
 
-                                        <!-- Montos -->
-                                        <div class="p-field p-grid">
-                                            <label class="col-12 coñ-md-2">Montos:</label>
-                                            <div class="col-12 col-md-10">
-                                                <div
-                                                    formArrayName="montos"
-                                                    class="grid align-center justify-center flex"
-                                                >
-                                                    <div
-                                                        *ngFor="let monto of tarea.get('montos').controls; let k = index"
-                                                        class="col-6 col-md-2"
-                                                    >
-                                                        <input
-                                                            pInputText
-                                                            formControlName="{{ k }}"
-                                                            placeholder="{{ getMesNombre(k) }}"
-                                                            class="w-full"
-                                                            type="number"
-                                                            min="0"
-                                                        />
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
 
-                                        <!-- Comentario -->
-                                        <div class="p-field p-grid">
-                                            <div class="p-col-12 p-md-10">
-                                                <textarea
-                                                    pInputTextarea
-                                                    formControlName="comentario"
-                                                    placeholder="Comentario opcional"
-                                                    rows="3"
-                                                    autoResize="true"
-                                                    style="width: 100%"
-                                                ></textarea>
-                                            </div>
-                                        </div>
 
-                                        <p-divider></p-divider>
-                                    </div>
-                                </div>
 
-                                <button
-                                    pButton
-                                    type="button"
-                                    label="Añadir Tarea"
-                                    icon="pi pi-plus"
-                                    class="p-button-sm p-button-success"
-                                    (click)="addTarea(i)"
-                                ></button>
-                            </p-panel>
+
+
+            <div>
+                <h2>Registro de Gastos</h2>
+              
+                <p>
+                  <label>Selecciona un Plan:</label>
+                  <p-dropdown 
+                    [options]="testData" 
+                    [(ngModel)]="selectedPlan" 
+                    [optionLabel]="'tituloGeneral'" 
+                    (onChange)="onPlanChange()">
+                  </p-dropdown>
+                </p>
+              
+                <p *ngIf="selectedPlan">
+                  <label>Selecciona una Actividad:</label>
+                  <p-dropdown 
+                    [options]="selectedPlan.actividades" 
+                    [(ngModel)]="selectedActividad" 
+                    [optionLabel]="'descripcion'" 
+                    (onChange)="onActividadChange()">
+                  </p-dropdown>
+                </p>
+              
+                <div *ngIf="selectedActividad">
+                    <label>Selecciona una Tarea:</label>
+                    <p-dropdown 
+                      [options]="selectedActividad.tareas" 
+                      [(ngModel)]="selectedTarea" 
+                      [optionLabel]="'descripcion'"
+                      (onChange)="onTareaChange()"> <!-- Asegúrate de tener este evento -->
+                    </p-dropdown>
+                  </div>
+              
+                <div *ngIf="selectedTarea">
+                  <h3>Registrar Gasto Específico</h3>
+                  
+                  <form [formGroup]="gastoForm" (ngSubmit)="agregarGasto()">
+                    <label>Gasto Específico:</label>
+                    <input type="text" pInputText formControlName="gastoEspecifico" />
+
+              
+                    <div formArrayName="meses">
+                        <div *ngFor="let mes of ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic']; let i = index">
+                            <label>{{ mes }}:</label>
+                            <p-inputNumber [formControlName]="i"></p-inputNumber>
                         </div>
                     </div>
+              
+                    <label>Rubro Contable:</label>
+                    <input type="text" pInputText formControlName="rubroContable" />
 
-                    <div class="flex">
-                        <button
-                            pButton
-                            type="button"
-                            label="Añadir Actividad"
-                            icon="pi pi-plus"
-                            class="p-button p-button-success mr-auto"
-                            (click)="addActividad()"
-                        ></button>
-                        <button
-                            pButton
-                            type="submit"
-                            label="Guardar"
-                            icon="pi pi-save"
-                            class="p-button-primary"
-                        ></button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-12 mt-6">
-                <h3>Vista Previa de Actividades</h3>
-                <p-table [value]="previewDataMontos" responsiveLayout="scroll">
+              
+                    <p-button label="Agregar Gasto" type="submit"></p-button>
+                  </form>
+                </div>
+              
+                <h3>Vista Previa de Gastos</h3>
+                <p-table [value]="gastosIngresados" styleClass="p-datatable-gridlines" responsiveLayout="scroll">
                     <ng-template pTemplate="header">
                         <tr>
-                            <th>COD.ACT</th>
-                            <th>ACTIVIDAD FUNCIONAL</th>
-                            <th>COD. TAREA</th>
-                            <th>TAREAS</th>
-                            <th>ENE</th>
-                            <th>FEB</th>
-                            <th>MAR</th>
-                            <th>ABR</th>
-                            <th>MAY</th>
-                            <th>JUN</th>
-                            <th>JUL</th>
-                            <th>AGO</th>
-                            <th>SEP</th>
-                            <th>OCT</th>
-                            <th>NOV</th>
-                            <th>DIC</th>
-                            <th>AVANCES</th>
+                            <th>Actividad</th>
+                            <th>Tarea</th>
+                            <th>Gasto Específico</th>
+                            <th *ngFor="let mes of ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic']">{{ mes }}</th>
+                            <th>Total</th>
+                            <th>Rubro Contable</th>
                         </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
+                    <ng-template pTemplate="body" let-gasto>
                         <tr>
-                            <td *ngIf="shouldShowRowspan(rowIndex)" [attr.rowspan]="getRowspan(data.codAct)">
-                                {{ data.codAct }}
-                            </td>
-                            <td *ngIf="shouldShowRowspan(rowIndex)" [attr.rowspan]="getRowspan(data.codAct)">
-                                {{ data.actividadFuncional }}
-                            </td>
-                            <td>{{ data.codTarea }}</td>
-                            <td>{{ data.tarea }}</td>
-                            <td>{{ data.montos[0] || '' }}</td>
-                            <td>{{ data.montos[1] || '' }}</td>
-                            <td>{{ data.montos[2] || '' }}</td>
-                            <td>{{ data.montos[3] || '' }}</td>
-                            <td>{{ data.montos[4] || '' }}</td>
-                            <td>{{ data.montos[5] || '' }}</td>
-                            <td>{{ data.montos[6] || '' }}</td>
-                            <td>{{ data.montos[7] || '' }}</td>
-                            <td>{{ data.montos[8] || '' }}</td>
-                            <td>{{ data.montos[9] || '' }}</td>
-                            <td>{{ data.montos[10] || '' }}</td>
-                            <td>{{ data.montos[11] || '' }}</td>
-                            <td>{{ data.avances }}</td>
+                            <td>{{ gasto.actividad }}</td>
+                            <td>{{ gasto.tarea }}</td>
+                            <td>{{ gasto.gastoEspecifico }}</td>
+                            <td *ngFor="let monto of gasto.meses">{{ monto}}</td>
+                            <td>{{ calcularTotal(gasto.meses) }}</td>
+                            <td>{{ gasto.rubroContable }}</td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="footer">
+                        <tr>
+                            <td colspan="3">TOTAL</td>
+                            <td *ngFor="let mes of totalMeses()">{{ mes}}</td>
+                            <td>{{ calcularTotalTotal()  }}</td>
+                            <td></td>
                         </tr>
                     </ng-template>
                 </p-table>
-            </div>
+              </div>
+
+
+
+
+
+
         </div>
     </div>
 </div>
