--- a/src/app/business/pages/events-udi/events-udi.component.html
+++ b/src/app/business/pages/events-udi/events-udi.component.html
@@ -288,52 +288,77 @@
                             <p class="column-header pending-column-header">
                                 PENDIENTE
                             </p>
-                            <ul class="task-list">
-                                <div
-                                    *ngIf="pendingTasks.length < 1"
-                                    class="text-align-center mt-5"
-                                >
-                                    <p>
-                                        <i class="pi pi-check"></i> No quedan
-                                        tareas pendientes.
-                                    </p>
-                                </div>
-                                <li
-                                    *ngFor="let task of pendingTasks"
-                                    class="task-card"
-                                    pDraggable
-                                    (onDragStart)="dragStart(task)"
-                                    (onDragEnd)="dragEnd()"
-                                >
-                                    <p class="task-title">{{ task.title }}</p>
-                                    <p class="task-description">
-                                        {{ task.description }}
-                                    </p>
-                                    <div class="grid mr-2 ml-1 mt-1">
-                                        <b
-                                            class="task-description"
-                                            style="padding-top: 5px"
-                                            >Asignado a {{ task.user.name + ' ' + task.user.surnames}}</b
-                                        >
-                                    </div>
-                                    <div class="grid mr-2 ml-1 mt-1 mt-2">
-                                        <i
-                                            class="pi pi-pencil button-edit-task mr-2"
-                                            (click)="editTask(task)"
-                                        ></i>
-                                        <i
-                                            class="pi pi-trash button-delete-task"
-                                            (click)="deleteTask(task)"
-                                        ></i>
-                                        <p
-                                            class="ml-auto task-description"
-                                            style="padding-top: 5px"
-                                        >
-                                            {{ task.dateEnd }}
+                            <div [ngSwitch]="statusTask">
+                                <ng-template [ngSwitchCase]="'charging'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskSkeletonPending"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template [ngSwitchCase]="'complete'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskListPending"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template ngSwitchDefault>
+                                    <p>Invalid state</p>
+                                </ng-template>
+                            </div>
+                            <ng-template #taskListPending>
+                                <ul class="task-list">
+                                    <div
+                                        *ngIf="pendingTasks.length < 1"
+                                        class="text-align-center mt-5"
+                                    >
+                                        <p>
+                                            <i class="pi pi-check"></i> No quedan
+                                            tareas pendientes.
                                         </p>
                                     </div>
-                                </li>
-                            </ul>
+                                    <li
+                                        *ngFor="let task of pendingTasks"
+                                        class="task-card"
+                                        pDraggable
+                                        (onDragStart)="dragStart(task)"
+                                        (onDragEnd)="dragEnd()"
+                                    >
+                                        <p class="task-title">{{ task.title }}</p>
+                                        <p class="task-description">
+                                            {{ task.description }}
+                                        </p>
+                                        <div class="grid mr-2 ml-1 mt-1">
+                                            <b
+                                                class="task-description"
+                                                style="padding-top: 5px"
+                                                >Asignado a {{ task.user.name + ' ' + task.user.surnames}}</b
+                                            >
+                                        </div>
+                                        <div class="grid mr-2 ml-1 mt-1 mt-2">
+                                            <i
+                                                class="pi pi-pencil button-edit-task mr-2"
+                                                (click)="editTask(task)"
+                                            ></i>
+                                            <i
+                                                class="pi pi-trash button-delete-task"
+                                                (click)="deleteTask(task)"
+                                            ></i>
+                                            <p
+                                                class="ml-auto task-description"
+                                                style="padding-top: 5px"
+                                            >
+                                                {{ task.dateEnd }}
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </ng-template>
+                            <ng-template #taskSkeletonPending>
+                                <ul class="task-list">
+                                    <li *ngFor="let row of rowsSkeletonTask" class="mb-2">
+                                        <p-skeleton width="100%" height="5rem" />
+                                    </li>
+                                </ul>
+                            </ng-template>
+                           
                         </div>
 
                         <div
@@ -344,39 +369,67 @@
                             <p class="column-header in-course-column-header">
                                 EN CURSO
                             </p>
-                            <ul class="task-list">
-                                <div
-                                    *ngIf="inProgressTasks.length < 1"
-                                    class="text-align-center mt-5"
-                                >
-                                    <p>
-                                        <i class="pi pi-check"></i> No quedan
-                                        tareas en curso.
-                                    </p>
-                                </div>
-                                <li
-                                    *ngFor="let task of inProgressTasks"
-                                    class="task-card"
-                                    pDraggable
-                                    (onDragStart)="dragStart(task)"
-                                    (onDragEnd)="dragEnd()"
-                                >
-                                    <p class="task-title">{{ task.title }}</p>
-                                    <p class="task-description">
-                                        {{ task.description }}
-                                    </p>
-                                    <div class="grid mr-2 ml-1 mt-1">
-                                        <b
-                                            class="task-description"
-                                            style="padding-top: 5px"
-                                            >Asignado a {{ task.user_name }}</b
-                                        >
-                                        <p class="ml-auto task-description">
-                                            {{ task.dateEnd }}
+                            <div [ngSwitch]="statusTask">
+                                <ng-template [ngSwitchCase]="'charging'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskSkeletonInProgress"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template [ngSwitchCase]="'complete'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskListInProgress"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template ngSwitchDefault>
+                                    <p>Invalid state</p>
+                                </ng-template>
+                            </div>
+
+                            <ng-template #taskListInProgress>
+                                <ul class="task-list">
+                                    <div
+                                        *ngIf="inProgressTasks.length < 1"
+                                        class="text-align-center mt-5"
+                                    >
+                                        <p>
+                                            <i class="pi pi-check"></i> No quedan
+                                            tareas en curso.
                                         </p>
                                     </div>
-                                </li>
-                            </ul>
+                                    <li
+                                        *ngFor="let task of inProgressTasks"
+                                        class="task-card"
+                                        pDraggable
+                                        (onDragStart)="dragStart(task)"
+                                        (onDragEnd)="dragEnd()"
+                                    >
+                                        <p class="task-title">{{ task.title }}</p>
+                                        <p class="task-description">
+                                            {{ task.description }}
+                                        </p>
+                                        <div class="grid mr-2 ml-1 mt-1">
+                                            <b
+                                                class="task-description"
+                                                style="padding-top: 5px"
+                                                >Asignado a {{ task.user.name + ' ' + task.user.surnames}}</b
+                                            >
+                                            <p class="ml-auto task-description">
+                                                {{ task.dateEnd }}
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </ng-template>
+                            <ng-template #taskSkeletonInProgress>
+                                <ul class="task-list">
+                                    <li *ngFor="let row of rowsSkeletonTask" class="mb-2">
+                                        <p-skeleton width="100%" height="5rem" />
+                                    </li>
+                                </ul>
+                            </ng-template>
+                            
+
+
                         </div>
 
                         <div
@@ -387,30 +440,57 @@
                             <p class="column-header finalize-column-header">
                                 FINALIZADO
                             </p>
-                            <ul class="task-list">
-                                <li
-                                    *ngFor="let task of completedTasks"
-                                    class="task-card"
-                                    pDraggable
-                                    (onDragStart)="dragStart(task)"
-                                    (onDragEnd)="dragEnd()"
-                                >
-                                    <p class="task-title">{{ task.title }}</p>
-                                    <p class="task-description">
-                                        {{ task.description }}
-                                    </p>
-                                    <div class="grid mr-2 ml-1 mt-1">
-                                        <b
-                                            class="task-description"
-                                            style="padding-top: 5px"
-                                            >Asignado a {{ task.user_name }}</b
-                                        >
-                                        <p class="ml-auto task-description">
-                                            {{ task.dateEnd }}
+
+                            <div [ngSwitch]="statusTask">
+                                <ng-template [ngSwitchCase]="'charging'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskSkeletonFinalize"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template [ngSwitchCase]="'complete'">
+                                    <ng-container
+                                        *ngTemplateOutlet="taskListFinalize"
+                                    ></ng-container>
+                                </ng-template>
+                                <ng-template ngSwitchDefault>
+                                    <p>Invalid state</p>
+                                </ng-template>
+                            </div>
+
+                            <ng-template #taskListFinalize>
+                                <ul class="task-list">
+                                    <li
+                                        *ngFor="let task of completedTasks"
+                                        class="task-card"
+                                        pDraggable
+                                        (onDragStart)="dragStart(task)"
+                                        (onDragEnd)="dragEnd()"
+                                    >
+                                        <p class="task-title">{{ task.title }}</p>
+                                        <p class="task-description">
+                                            {{ task.description }}
                                         </p>
-                                    </div>
-                                </li>
-                            </ul>
+                                        <div class="grid mr-2 ml-1 mt-1">
+                                            <b
+                                                class="task-description"
+                                                style="padding-top: 5px"
+                                                >Asignado a {{ task.user.name + ' ' + task.user.surnames}}</b
+                                            >
+                                            <p class="ml-auto task-description">
+                                                {{ task.dateEnd }}
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </ng-template>
+                            <ng-template #taskSkeletonFinalize>
+                                <ul class="task-list">
+                                    <li *ngFor="let row of rowsSkeletonTask" class="mb-2">
+                                        <p-skeleton width="100%" height="5rem" />
+                                    </li>
+                                </ul>
+                            </ng-template>
+                            
                         </div>
                     </div>
                 </div>
