--- a/src/app/business/pages/hotbed-register/hotbed-register.component.scss
+++ b/src/app/business/pages/hotbed-register/hotbed-register.component.scss
@@ -42,3 +42,8 @@ input[type=file] {
   display: block;
   color: var(--text-color);  
 }
+
+.label-porcantaje {
+  padding-top: 12px; 
+  padding-left: 5px;
+}
