--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,9 @@
 >
     <p>
         <i class="pi pi-exclamation-circle" style="font-size: 1rem"></i>
-        Por seguridad, hemos detectado que has estado inactivo durante un
-        tiempo. Si no realizas ninguna acción en los próximos
-        <b>{{ remainingTime }}</b> segundos, tu sesión se
-        <b>cerrará automáticamente</b>.
-    </p>
+        Por seguridad, tu sesión sesión se cerrará automáticamente.
+        <br>
+    </p><b style="font-size: 1.3rem;" >{{ remainingTime }}</b> segundos.
     <p-footer>
         <button
             type="button"
