--- a/src/app/business/pages/hotbed-register/hotbed-register.component.html
+++ b/src/app/business/pages/hotbed-register/hotbed-register.component.html
@@ -2,7 +2,7 @@
 <div class="grid">
     <div class="col-12">
         <div class="card px-6 py-6">
-            <h3>Registro de artículo de investigación</h3>
+            <h4>Registro de artículo de investigación</h4>
             <div class="grid mt-3">
                 <form [formGroup]="articleForm" class="full-width">
                     <div class="col-12">
@@ -16,6 +16,55 @@
                             </textarea>
                             <label for="title">Título del artículo</label>
                         </p-floatLabel>
+                    </div>
+                    <div
+                        *ngIf="results.length > 0 || title.value"
+                        class="grid col-12 p-fluid"
+                    >
+                        <div class="col-12">
+                            <div class="grid d-flex mx-2">
+                                <b class="mr-auto"
+                                    >Se encontraron {{ results.length }} artíulos
+                                    con un porcentaje de similitud del
+                                    {{ minimumPercentage }}% o más con respecto
+                                    al título proporcionado.</b
+                                >
+                                <i
+                                    class="pi pi-cog cursor-pointer"
+                                    style="font-size: 1.3rem"
+                                    (click)="showConfigCompareTitle()"
+                                ></i>
+                            </div>
+                            <p-table
+                                *ngIf="results.length > 0"
+                                [value]="results"
+                                [tableStyle]="{
+                                    width: '100%',
+                                    'margin-top': '14px'
+                                }"
+                            >
+                                <ng-template pTemplate="header">
+                                    <tr>
+                                        <th>Tesis</th>
+                                        <th>Similitud</th>
+                                    </tr>
+                                </ng-template>
+                                <ng-template pTemplate="body" let-data>
+                                    <tr>
+                                        <td>{{ data.title }}</td>
+                                        <!-- <td [style]="data.similarity > '80.00' ? '#ef4444' : ''">{{data.similarity}}%</td> -->
+                                        <td>
+                                            <p-tag
+                                                [value]="data.similarity + '%'"
+                                                [severity]="
+                                                    getSeverity(data.similarity)
+                                                "
+                                            />
+                                        </td>
+                                    </tr>
+                                </ng-template>
+                            </p-table>
+                        </div>
                     </div>
                     <app-upload-archives
                         (onFileChangeEmitter)="onFileChange($event)"
@@ -145,3 +194,33 @@
         </div>
     </div>
 </div>
+<p-dialog
+    header="Configuración de similitud de título de tesis"
+    [modal]="true"
+    [(visible)]="configCompareTitle"
+    [style]="{ width: '45rem' }"
+    [closeOnEscape]="false"
+    [draggable]="false"
+    [closable]="false"
+>
+    <span class="p-text-secondary block mb-5"
+        >Porcentaje mínimo de similitud.</span
+    >
+    <div class="justify-content-center gap-3 mb-3">
+        <div class="flex">
+            <input type="text" style="width: 50px;" pInputText [(ngModel)]="minimumPercentage" class="mb-3"/>
+            <label class="label-porcantaje">%</label>
+        </div>
+        <div class="w-full">
+            <p-slider [(ngModel)]="minimumPercentage" class="w-full" />
+        </div>
+    </div>
+    <div class="flex justify-content-end gap-2">
+        <p-button
+            label="Cancelar"
+            severity="secondary"
+            (onClick)="cancelConfigCompareTitle()"
+        />
+        <p-button label="Guardar" (onClick)="saveConfigCompareTitle()" />
+    </div>
+</p-dialog>
