--- a/src/app/business/pages/plans/plans.component.html
+++ b/src/app/business/pages/plans/plans.component.html
@@ -3,268 +3,94 @@
     <div class="col-12">
         <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
         <div class="card px-6 py-6">
-            <div class="">
-                <form [formGroup]="actividadForm" (ngSubmit)="onSubmit()">
-                    <!-- Campo para el Título General -->
-                    <div class="p-field p-grid">
-                        <label for="tituloGeneral" class="col-12"
-                            >Título General</label
-                        >
-                        <div class="col-12">
-                            <input
-                                pInputText
-                                id="tituloGeneral"
-                                style="width: 100%"
-                                formControlName="tituloGeneral"
-                                placeholder="Ingrese el título general"
-                                class="p-inputtext-sm"
-                            />
-                        </div>
-                    </div>
-                    <!-- Actividades -->
-                    <div formArrayName="actividades">
-                        <div
-                            *ngFor="
-                                let actividad of actividades.controls;
-                                let i = index
-                            "
-                            [formGroupName]="i"
-                            class="mb-4"
-                            style="
-                                border: 1px dashed #d1d5db;
-                                border-radius: 5px;
-                                padding: 15px;
-                            "
-                        >
-                            <div class="flex">
-                                <div class="mr-auto">
-                                    <label for="tituloGeneral" class="col-12"
-                                    > {{ i + 1 + ". Actividad Funcional" }}</label
-                                >
-                                </div>
-                                <button
-                                    pButton
-                                    type="button"
-                                    icon="pi pi-times"
-                                    class="p-button-danger"
-                                    [rounded]="true"
-                                    [text]="true"
-                                    (click)="removeActividad(i)"
-                                ></button>
-                            </div>
-
-                            <!-- Descripción de la Actividad -->
-                            <div class="p-field p-grid">
-                                <div class="col-12">
-                                    <input
-                                        pInputText
-                                        id="descripcion"
-                                        style="width: 100%"
-                                        formControlName="descripcion"
-                                        placeholder="Descripción de la actividad"
-                                        class="p-inputtext-sm"
-                                    />
-                                </div>
-                            </div>
-
-                            <!-- Panel de Tareas -->
-                            <p-panel
-                                header="Tareas"
-                                [toggleable]="true"
-                                class="mb-3"
-                            >
-                                <div formArrayName="tareas">
-                                    <div
-                                        *ngFor="
-                                            let tarea of tareas(i).controls;
-                                            let j = index
-                                        "
-                                        [formGroupName]="j"
-                                        class="mb-2"
-                                    >
-                                        <!-- Descripción de la Tarea -->
-                                        <div class="flex mb-2">
-                                            <label
-                                                for="tarea-descripcion"
-                                                class="m-auto mr-2"
-                                            >
-                                                {{
-                                                    i + 1 + "." + (j + 1)
-                                                }}</label
-                                            >
-                                            <div class="w-full">
-                                                <input
-                                                    pInputText
-                                                    id="tarea-descripcion"
-                                                    style="width: 100%"
-                                                    formControlName="descripcion"
-                                                    placeholder="Descripción de la tarea"
-                                                    class="p-inputtext-sm"
-                                                />
-                                            </div>
-                                            <div>
-                                                <button
-                                                    pButton
-                                                    type="button"
-                                                    icon="pi pi-trash"
-                                                    [rounded]="true"
-                                                    [text]="true"
-                                                    class="p-button-danger ml-2"
-                                                    (click)="removeTarea(i, j)"
-                                                ></button>
-                                            </div>
-                                        </div>
-
-                                        <!-- Meses -->
-                                        <div class="p-field p-grid">
-                                            <label class="p-col-12 p-md-2"
-                                                >Meses:</label
-                                            >
-                                            <div class="p-col-12 p-md-10">
-                                                <div
-                                                    formArrayName="meses"
-                                                    class="p-grid p-align-center p-justify-center flex"
-                                                >
-                                                    <div
-                                                        *ngFor="
-                                                            let mes of tarea.get(
-                                                                'meses'
-                                                            ).controls;
-                                                            let k = index
-                                                        "
-                                                        class="col-1"
-                                                    >
-                                                        <p-checkbox
-                                                            formControlName="{{
-                                                                k
-                                                            }}"
-                                                            binary="true"
-                                                            label="{{
-                                                                getMesNombre(k)
-                                                            }}"
-                                                            class="p-mr-2"
-                                                        ></p-checkbox>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!-- Comentario -->
-                                        <div class="p-field p-grid">
-                                            <div class="p-col-12 p-md-10">
-                                                <textarea
-                                                    pInputTextarea
-                                                    formControlName="comentario"
-                                                    placeholder="Comentario opcional"
-                                                    rows="3"
-                                                    autoResize="true"
-                                                    style="width: 100%"
-                                                ></textarea>
-                                            </div>
-                                        </div>
-
-                                        <p-divider></p-divider>
-                                    </div>
-                                </div>
-
-                                <button
-                                    pButton
-                                    type="button"
-                                    label="Añadir Tarea"
-                                    icon="pi pi-plus"
-                                    class="p-button-sm p-button-success"
-                                    (click)="addTarea(i)"
-                                ></button>
-                            </p-panel>
-                        </div>
-                    </div>
-
-                    <div class="flex">
+            <p-toolbar styleClass="mb-4">
+                <ng-template pTemplate="left">
+                    <div class="my-2">
                         <button
                             pButton
-                            type="button"
-                            label="Añadir Actividad"
+                            pRipple
+                            label="nuevo plan"
                             icon="pi pi-plus"
-                            class="p-button p-button-success mr-auto"
-                            (click)="addActividad()"
-                        ></button>
-                        <button
-                            pButton
-                            type="submit"
-                            label="Guardar"
-                            icon="pi pi-save"
-                            class="p-button-primary"
+                            class="mr-2"
+                            (click)="goToPlaneRegister()"
                         ></button>
                     </div>
-                </form>
-            </div>
-            <div class="col-12 mt-6">
-                <h3>Vista Previa de Actividades</h3>
-                <p-table
-                    [value]="previewData"
-                    styleClass="p-datatable-gridlines"
-                    responsiveLayout="scroll"
-                >
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>COD.ACT</th>
-                            <th>ACTIVIDAD FUNCIONAL</th>
-                            <th>COD. TAREA</th>
-                            <th>TAREAS</th>
-                            <th>Ene.</th>
-                            <th>Feb.</th>
-                            <th>Mar.</th>
-                            <th>Abr.</th>
-                            <th>May.</th>
-                            <th>Jun.</th>
-                            <th>Jul.</th>
-                            <th>Ago.</th>
-                            <th>Sep.</th>
-                            <th>Oct.</th>
-                            <th>Nov.</th>
-                            <th>Dic.</th>
-                            <th>AVANCES</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template
-                        pTemplate="body"
-                        let-data
-                        let-rowIndex="rowIndex"
+                </ng-template>
+            </p-toolbar>
+            <p-carousel
+                [value]="products"
+                [numVisible]="1"
+                [numScroll]="1"
+                [circular]="false"
+                [responsiveOptions]="responsiveOptions"
+            >
+                <ng-template let-product pTemplate="item">
+                    <p-table
+                        [value]="previewData"
+                        styleClass="p-datatable-gridlines"
+                        responsiveLayout="scroll"
                     >
-                        <tr>
-                            <!-- Mostrar la actividad funcional sólo en la primera fila correspondiente -->
-                            <td
-                                *ngIf="shouldShowRowspan(rowIndex)"
-                                [attr.rowspan]="getRowspan(data.codAct)"
-                            >
-                                {{ data.codAct }}
-                            </td>
-                            <td
-                                *ngIf="shouldShowRowspan(rowIndex)"
-                                [attr.rowspan]="getRowspan(data.codAct)"
-                            >
-                                {{ data.actividadFuncional }}
-                            </td>
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>COD.ACT</th>
+                                <th>ACTIVIDAD FUNCIONAL</th>
+                                <th>COD. TAREA</th>
+                                <th>TAREAS</th>
+                                <th>Ene.</th>
+                                <th>Feb.</th>
+                                <th>Mar.</th>
+                                <th>Abr.</th>
+                                <th>May.</th>
+                                <th>Jun.</th>
+                                <th>Jul.</th>
+                                <th>Ago.</th>
+                                <th>Sep.</th>
+                                <th>Oct.</th>
+                                <th>Nov.</th>
+                                <th>Dic.</th>
+                                <th>AVANCES</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template
+                            pTemplate="body"
+                            let-data
+                            let-rowIndex="rowIndex"
+                        >
+                            <tr>
+                                <!-- Mostrar la actividad funcional sólo en la primera fila correspondiente -->
+                                <td
+                                    *ngIf="shouldShowRowspan(rowIndex)"
+                                    [attr.rowspan]="getRowspan(data.codAct)"
+                                >
+                                    {{ data.codAct }}
+                                </td>
+                                <td
+                                    *ngIf="shouldShowRowspan(rowIndex)"
+                                    [attr.rowspan]="getRowspan(data.codAct)"
+                                >
+                                    {{ data.actividadFuncional }}
+                                </td>
 
-                            <td>{{ data.codTarea }}</td>
-                            <td>{{ data.tarea }}</td>
-                            <td [innerHTML]="data.meses[0]"></td>
-                            <td [innerHTML]="data.meses[1]"></td>
-                            <td [innerHTML]="data.meses[2]"></td>
-                            <td [innerHTML]="data.meses[3]"></td>
-                            <td [innerHTML]="data.meses[4]"></td>
-                            <td [innerHTML]="data.meses[5]"></td>
-                            <td [innerHTML]="data.meses[6]"></td>
-                            <td [innerHTML]="data.meses[7]"></td>
-                            <td [innerHTML]="data.meses[8]"></td>
-                            <td [innerHTML]="data.meses[9]"></td>
-                            <td [innerHTML]="data.meses[10]"></td>
-                            <td [innerHTML]="data.meses[11]"></td>
-                            <td>{{ data.avances }}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
+                                <td>{{ data.codTarea }}</td>
+                                <td>{{ data.tarea }}</td>
+                                <td [innerHTML]="data.meses[0]"></td>
+                                <td [innerHTML]="data.meses[1]"></td>
+                                <td [innerHTML]="data.meses[2]"></td>
+                                <td [innerHTML]="data.meses[3]"></td>
+                                <td [innerHTML]="data.meses[4]"></td>
+                                <td [innerHTML]="data.meses[5]"></td>
+                                <td [innerHTML]="data.meses[6]"></td>
+                                <td [innerHTML]="data.meses[7]"></td>
+                                <td [innerHTML]="data.meses[8]"></td>
+                                <td [innerHTML]="data.meses[9]"></td>
+                                <td [innerHTML]="data.meses[10]"></td>
+                                <td [innerHTML]="data.meses[11]"></td>
+                                <td>{{ data.avances }}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </ng-template>
+            </p-carousel>
         </div>
     </div>
 </div>
